# MedicalImageProcessing

./: README.md  requirements.txt  setup.cfg
MedicalImageProcessing/: __init__.py  meshing.py  rigidregistration.py
MedicalImageProcessing/Image/: __init__.py  transform.py
MedicalImageProcessing/Mesh/: __init__.py  refinement.py  transform.py  utils.py
MedicalImageProcessing/Registration/: __init__.py  rigidregistration.py
