[metadata]
name = MedicalImageProcessing
version = 2.0.0
author = Caleb OConnor
author_email = csoconnor@mdanderson.org
description = A variety of image processing techniques designed for medical image use.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/caleb-oconnor/MedicalImageProcessing
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
[options]
packages = find:
python_requires = >=3.7
include_package_data = True